search suggestions & signup

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -41,7 +41,10 @@
     <input type="text" name="last_name" size="20" class="form-control" placeholder="Last Name"><br>
     <input type="text" name="school" size="20" class="form-control" placeholder="School"><br>
     <input type="date" name="birthday" class="form-control"><br>
-    <input type="submit" value="Sign Up" class="btn btn-lg btn-primary btn-block">
+    <input type="text" name="interests" class="form-control" placeholder="Interests"><br>
+    <input type="radio" name="gender" value="male" class="form-control">Male
+    <input type="radio" name="gender" value="female" class="form-control">Female
+    <input type="submit" value="Sign Up" class="btn btn-lg btn-inverse btn-block">
   </form>
   </div>
   <br>
@@ -49,7 +52,7 @@
   <div class="back-button" style="width:200px">
   <form action="/" method="get">
   Already have an account?
-  	<input type="submit" value="Login" class="btn btn-primary">
+  	<input type="submit" value="Login" class="btn btn-inverse">
   </form>
   </div>
 </center>
