--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -69,7 +70,7 @@ var getProfileId = function() {
 var load_posts = function(id) {
 	var get_comments = function (id, callback){ 
 		var commentList = [];
-		$.getJSON('http://127.0.0.1:8080/loadcomments/' + id, function(comments){
+		$.getJSON('/loadcomments/' + id, function(comments){
 			for (var j=comments.length-1; j>-1; j--){
 				console.log(comments[j]);
 				commentList.push(comments[j]);
@@ -80,13 +81,13 @@ var load_posts = function(id) {
 		});
 	}
 	
-	$.getJSON('http://127.0.0.1:8080/loadwall/' + id, function(elements){
+	$.getJSON('/loadwall/' + id, function(elements){
 		var html = "";
 		for(var i=elements.length-1; i>-1; i--) {
 			comment_tag = elements[i].comment_tag;
 			html += "<div class= \' wall-post \' >"
 						+ "<div class = \' tofrom \'>"
-							+ "At " + elements[i].timeStamp + ", <a href=\'http://127.0.0.1:8080/profile/" + 
+							+ "At " + elements[i].timeStamp + ", <a href=\'/profile/" + 
 							elements[i].creator+ "\'>" + elements[i].creator + "</a>" +
 					" wrote: </div>" +
 						'<div id="' + elements[i].comment_tag + '" >' + elements[i].content + "<br />Comments: </div>"
@@ -109,7 +110,7 @@ var load_posts = function(id) {
 				console.log("hey it clicked");
 				var content = $(this).parent().find(".content").val();
 				var tag = $(this).parent().find(".hide").val();
-				$.post("http://127.0.0.1:8080/postcomment", {
+				$.post("/postcomment", {
 					content: content,
 					tag: tag,
 				}, function(data, status) {
@@ -138,13 +139,13 @@ window.onload = function() {
 	target = getProfileId();
 	load_posts(target);
 	
-	$.get("http://127.0.0.1:8080/checkfriend/" + target, {}, function(data, status){
+	$.get("/checkfriend/" + target, {}, function(data, status){
 		if(!data){
 			console.log(data);
 			$("#addButton").click(function(e) {
 				e.preventDefault();
 				console.log("button clicked");
-				$.post("http:///127.0.0.1:8080/addfriend/" + target, {}, function(data, status){
+				$.post("/addfriend/" + target, {}, function(data, status){
 					if(data){
 						alert("added friend");
 						$('#addButton').css("display", "none");
@@ -152,7 +153,7 @@ window.onload = function() {
 						$("#delete").click(function(e) {
 							e.preventDefault();
 							console.log("button clicked");
-							$.post("http:///127.0.0.1:8080/delete/" + target, {}, function(data, status){
+							$.post("/delete/" + target, {}, function(data, status){
 								if(data){
 									alert("deleted friend");
 									$('#delete').css("display", "none");
@@ -173,7 +174,7 @@ window.onload = function() {
 			$("#delete").click(function(e) {
 				e.preventDefault();
 				console.log("button clicked");
-				$.post("http:///127.0.0.1:8080/delete/" + target, {}, function(data, status){
+				$.post("/delete/" + target, {}, function(data, status){
 					if(data){
 						alert("deleted friend");
 						$('#delete').css("display", "none");
@@ -194,7 +195,7 @@ window.onload = function() {
 		});
 	
 	$("#submit").click(function() {
-		$.post("http://127.0.0.1:8080/sendmessage", {
+		$.post("/sendmessage", {
 			content: document.getElementById("content").value,
 			target: target,
 			pvt: "0"
