--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,22 +13,12 @@
 .wall-post {
 	width: 60%;
 	padding: 4px;
-	margin: 4px;
+	margin-top: 4px;
 	border: 1px solid black;
 	}
 
-#nav {
-	display: none;
-	margin-top: 0px;
-	width: 100%;
-	border: 1px solid black;
-}
-#nav li {
-	display: inline-block;
-}
-
 #wall {	
-	float:right;
+	float:left;
 	width: 60%;
 }
 
@@ -36,13 +26,19 @@
 	display: none;
 }
 
+.search-stuff {
+	position: absolute;
+	margin-top: 47px;
+	margin-left: 407px;
+}
+
 .header {
 	display: none;
 	padding: 5px;
 	margin: 10px;
-	width: 60%;
+	width: 350px;
 	border: 1px solid black;
-	float: right;
+	float: left;
 }
 
 #delete {
@@ -51,11 +47,40 @@
 
 .comments {
 	border-top: 1px solid black;
-	
+}
+
+.results {
+ 	width: 160px;
+  	padding: 4px;
+  	margin-top: 0px;
+  	border: 1px solid black;
+  	background-color: #ffffff;
+}
+
+.results:hover {
+  	background-color: #dddddd;	
 }
 </style>
 
 <script type="text/javascript">
+  <!-- 
+    function updateSugg() {
+      var term = document.getElementById('abc').value;
+      $.getJSON('/suggest/'+escape(term), function(elements) {
+      	if (elements.elements != undefined) {
+       		var htmlOut = "";
+        	for (var i=0; i<elements.elements.length; i++) {
+        		var id = elements.elements[i].split(',')[0];
+        		var fn = elements.elements[i].split(',')[1];
+        		var ln = elements.elements[i].split(',')[2];
+          		htmlOut += "<a href='/profile/" + id + "'><div class='results'>" +fn + ' ' + ln +"</div></a>\n";
+        	}
+       		$("#xyz").html(htmlOut);
+       } else {
+       		$("#xyz").html("");
+       }
+      });
+    } // -->
 
 
 var getProfileId = function() {
@@ -97,7 +122,7 @@ var load_posts = function(id) {
 			});
 			
 			html += '<form id = "' + elements[i].comment_tag + '">'+ 
-			"<input class=\"content\" type=\'text\' name=\"comment\" placeholder=\"leave a comment\" >" +
+			"<input class=\"content\" type=\'text\' name=\"comment\" placeholder=\"Leave a comment\" >" +
 			'<input class="hide" type="text" name="comment_tag" value = "' +comment_tag + '">' +
 			'<button class="postcomment" id="' + comment_tag + '"> Post Comment </button>' +
 			'</form>';
@@ -225,16 +250,48 @@ window.onload = function() {
 
 <body>
 
-	<div id="nav">
-	<ul>
-		<li> <a href="/profile/"> Profile </a> </li>
-		<li> <a href="/home/"> Newsfeed </a> </li>
-	</ul>
-	</div>
-
+	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">PennBook</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="/newsfeed/">NewsFeed</a></li>
+            <li><a href="/logout/">Logout</a></li>
+            <li><div class="container" style="width:130px">
+    			<form action="" method="" onSubmit="return false">
+      			<input type="text" name="thetext" style="margin-top:13px" id="abc" onKeyUp="updateSugg()"><br>
+    			</form>
+			</div></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+    <div class="search-stuff" id="xyz"></div>
+<br>
+<br>
+<br>
+<br>
+<!--
+	<div class="jumbotron" style="width: 800px">
+        <h2> <%= profile.firstName + " " + profile.lastName %> </h2>
+        <p> Gender: <%= profile.gender %></p>
+		<p> Email: <%= profile.email %> </p>
+		<p> Birthday: <%= profile.birthday %> </p>
+		<p> Network: <%= profile.network %> </p>
+		<p> Interests: <%= profile.interests %> </p>
+    </div> -->
 	<div id="friendButton">
-		<button id="addButton"> add friend </button>
-		<button id="delete"> delete friend </button>
+		<button id="addButton" class="sample btn custom large h" data-h="0" data-s="0" data-l="26", data-p="10">Add as friend</button>
+		<button id="delete" class="sample btn custom large h" data-h="0" data-s="0" data-l="26", data-p="10">Unfriend</button>
 	</div>
 	
 	<% console.log(profile) %>
@@ -246,20 +303,17 @@ window.onload = function() {
 		<p> Network: <%= profile.network %> </p>
 		<p> Interests: <%= profile.interests %> </p>
 	</div>
-//
 
   <div id="wall">
   	<div id="postMessage">
   	<form action="/sendmessage/1" method="post">
-		<input type="text" class="input-border-radius" name="content" placeholder="Say Something" id="content">
+		<input type="text" class="input-border-radius" name="content" placeholder="Say Something!" id="content">
 	</form>
   	<button id="submit" type="submit"> Post </button>
   	</div>
   	<div id="posts">
   	</div>
   </div>
-    
-<a href="/logout"> logout </a>
 
 
 </body>
