--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -69,10 +69,10 @@ var getProfileId = function() {
 };
 
 
-var load_posts = function(id) {
+var load_newsfeed = function(id) {
 	var get_comments = function (id, callback){ 
 		var commentList = [];
-		$.getJSON('http://127.0.0.1:8080/loadcomments/' + id, function(comments){
+		$.getJSON('/loadcomments/' + id, function(comments){
 			for (var j=comments.length-1; j>-1; j--){
 				console.log(comments[j]);
 				commentList.push(comments[j]);
@@ -83,52 +83,58 @@ var load_posts = function(id) {
 		});
 	}
 	
-	$.getJSON('http://127.0.0.1:8080/loadhome/' + id, function(elements){
+	$.getJSON('/loadhome/' + id, function(elements){
 		var html = "";
-		for(var i=elements.length-1; i>-1; i--) {
-			comment_tag = elements[i].comment_tag;
-			html += "<div class= \' wall-post \' >"
-						+ "<div class = \' tofrom \'>"
-							+ "At " + elements[i].timeStamp + ", <a href=\'http://127.0.0.1:8080/profile/" + 
-							elements[i].creator+ "\'>" + elements[i].creator + "</a>" +
-					" wrote: </div>" +
-						'<div id="' + elements[i].comment_tag + '" >' + elements[i].content + "<br />Comments: </div>"
-					+ "</div>";
-			get_comments(elements[i].comment_tag, function(id, commentList) {
+		for(var i=0; i<elements.length; i++) {
+			//if it's a normal post:
+			if(elements[i].comment_tag != undefined) {
+					comment_tag = elements[i].comment_tag;
+					html += "<div class= \' wall-post \' >"
+								+ "<div class = \' tofrom \'>"
+									+ "At " + elements[i].timeStamp + ", <a href=\'http://127.0.0.1:8080/profile/" + 
+									elements[i].creator+ "\'>" + elements[i].creator + "</a>" +
+							" wrote: </div>" +
+								'<div id="' + elements[i].comment_tag + '" >' + elements[i].content + "<br />Comments: </div>"
+							+ "</div>";
+					get_comments(elements[i].comment_tag, function(id, commentList) {});
 				
-			});
-			
-			html += '<form id = "' + elements[i].comment_tag + '">'+ 
-			"<input class=\"content\" type=\'text\' name=\"comment\" placeholder=\"leave a comment\" >" +
-			'<input class="hide" type="text" name="comment_tag" value = "' +comment_tag + '">' +
-			'<button class="postcomment" id="' + comment_tag + '"> Post Comment </button>' +
-			'</form>';
-			
-			$("#posts").html(html);
-			
-			$(".postcomment").on('click', function(e) {
-				e.preventDefault();
-				console.log(event);
-				console.log("hey it clicked");
-				var content = $(this).parent().find(".content").val();
-				var tag = $(this).parent().find(".hide").val();
-				$.post("http://127.0.0.1:8080/postcomment", {
-					content: content,
-					tag: tag,
-				}, function(data, status) {
-					//check for empty strings
-					if(document.getElementById(comment_tag).value === "") {
-							alert("No Post");				
-						}else if(data === "error") {
-						alert('Uh Oh, looks like something went wrong.');
-						} else {
-							console.log(target);
-							document.getElementById("content").value = "";
-							load_posts(target);
-						}
-					}
-				);	
-			});
+					html += '<form id = "' + elements[i].comment_tag + '">'+ 
+					"<input class=\"content\" type=\'text\' name=\"comment\" placeholder=\"leave a comment\" >" +
+					'<input class="hide" type="text" name="comment_tag" value = "' +comment_tag + '">' +
+					'<button class="postcomment" id="' + comment_tag + '"> Post Comment </button>' +
+					'</form>';
+				
+					$("#posts").html(html);
+				
+					$(".postcomment").on('click', function(e) {
+						e.preventDefault();
+						console.log(event);
+						console.log("hey it clicked");
+						var content = $(this).parent().find(".content").val();
+						var tag = $(this).parent().find(".hide").val();
+						$.post("/postcomment", {
+							content: content,
+							tag: tag,
+						}, function(data, status) {
+							//check for empty strings
+							if(document.getElementById(comment_tag).value === "") {
+									alert("No Post");				
+								}else if(data === "error") {
+								alert('Uh Oh, looks like something went wrong.');
+								} else {
+									console.log(target);
+									document.getElementById("content").value = "";
+									load_posts(target);
+								}
+							}
+						);	
+					});
+				} else {
+					html += "<div class= \' wall-post \' >"
+									+ "At " + elements[i].timeStamp + 
+									 '<a href= "profile/' + elements[i].f1 + '">' + elements[i].f1 + "</a> became friends with " +'<a 	href=" profile/' + elements[i].f2+ '">' + elements[i].f2 + "</a> </div>";
+					$("#posts").html(html);
+			}
 		<!--closes the for loop --!>
 		}
 
@@ -140,7 +146,7 @@ window.onload = function() {
 	$('#nav').fadeIn(1000);
 	
 	target = getProfileId();
-	load_posts(target);
+	load_newsfeed(target);
 		
 	$('form').bind("keypress", function(e) {
 		  if (e.keyCode == 13) {               
@@ -150,7 +156,7 @@ window.onload = function() {
 		});
 	
 	$("#submit").click(function() {
-		$.post("http://127.0.0.1:8080/sendmessage", {
+		$.post("/sendmessage", {
 			content: document.getElementById("content").value,
 			target: target,
 			pvt: "0"
@@ -192,15 +198,7 @@ window.onload = function() {
 		<button id="delete"> delete friend </button>
 	</div>
 	
-	<% console.log(profile) %>
-	<div class="header">
-		<h2> <%= profile.firstName + " " + profile.lastName %> </h2>
-		<p> Gender: </p>
-		<p> Email: <%= profile.email %> </p>
-		<p> Birthday: <%= profile.birthday %> </p>
-		<p> Network: <%= profile.network %> </p>
-	</div>
-//
+	
 
   <div id="wall">
   	<div id="postMessage">
