--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -96,7 +96,7 @@ var load_posts = function(id) {
 	var get_comments = function (id, callback){ 
 		var commentList = [];
 		$.getJSON('/loadcomments/' + id, function(comments){
-			for (var j=comments.length-1; j>-1; j--){
+			for (var j=0; j<comments.length; j++){
 				console.log(comments[j]);
 				commentList.push(comments[j]);
 				$("#"+id).append('<p class="comments">' + comments[j].creator + ": "+ comments[j].content + "</p> " +
@@ -110,6 +110,7 @@ var load_posts = function(id) {
 		var html = "";
 		for(var i=elements.length-1; i>-1; i--) {
 			comment_tag = elements[i].comment_tag;
+			console.log(comment_tag);
 			html += "<div class= \' wall-post \' >"
 						+ "<div class = \' tofrom \'>"
 							+ "At " + elements[i].timeStamp + ", <a href=\'/profile/" + 
