--- a/views/main.ejs
+++ b/views/main.ejs
@@ -33,14 +33,14 @@
   <form action="/checklogin" method="post">
     <input type="email" name="email" size="20" class="form-control" placeholder="Email"><br>
 	<input type="password" name="password" size="20" class="form-control" placeholder="Password"><br>
-	<input type="submit" value="Login" class="btn btn-lg btn-primary btn-block">
+	<input type="submit" value="Login" class="btn btn-lg btn-inverse btn-block">
   </form>
   </div>
   <br></br>
   <div class="sign-up" style="width: 200px">
   Don't have an account?
   <form action="/signup" method="get">
-  <input type="submit" value="Sign Up" class="btn btn-primary">
+  <input type="submit" value="Sign Up" class="btn btn-inverse">
   </form>
   </div>
   <br>
