--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -299,6 +299,7 @@ window.onload = function() {
 		<p> Birthday: <%= profile.birthday %> </p>
 		<p> Network: <%= profile.network %> </p>
 		<p> Interests: <%= profile.interests %> </p>
+		<img src = <%= profile.image %> height=200px width=200px</img>
 	</div>
 
   <div id="wall">
