--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -272,7 +272,7 @@ window.onload = function() {
 	$.get("/getonline", function(e) {
 		var html = "Who's Online?";
 		for (var i = 0; i < e.length; i++) {
-			html += "<li><a href = '/profiles/" + e[i].Name + "'> " + e[i].Attributes[0].Value + " " + e[i].Attributes[1].Value + "</a></li>";
+			html += "<li><a href = '/profile/" + e[i].Name + "'> " + e[i].Attributes[0].Value + " " + e[i].Attributes[1].Value + "</a></li>";
 		}
 
 		$('#onlineList').append(html);
@@ -284,7 +284,7 @@ window.onload = function() {
 		console.log(e.length);
 		html = ""
 		for (var i = 0; i < e.length; i++) {
-			html += "<li><a href = '/profiles/" + e[i] + "'>" + e[i] + "</a></li>"
+			html += "<li><a href = '/profile/" + e[i] + "'>" + e[i] + "</a></li>"
 			console.log(html);
 		}
 
