--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -44,6 +44,7 @@
     <input type="text" name="interests" class="form-control" placeholder="Interests"><br>
     <input type="radio" name="gender" value="male" class="form-control">Male
     <input type="radio" name="gender" value="female" class="form-control">Female
+    <input type="text" name="image" class="form-control" placeholder="Link to image"><br>
     <input type="submit" value="Sign Up" class="btn btn-lg btn-inverse btn-block">
   </form>
   </div>
